Changes in Release 2.3.0
--------------------------------------------------------------------------------

 * Add AAindex databases (Kawashima et al., 2000)
 * Added experimental molecular structure format OMF (OpenStructure Minimal 
   Format)
 * Removed GUI components in containers
 * Support to call external DSSP program has been deprecated.
   ost.bindings.dssp.AssignDSSP still exists with the "old" interface but mimics
   the equivalent behaviour with the OpenStructure internal secondary structure
   and solvent accessibility algorithms.
 * mol.alg.PDBize does not turn plain polymer chains (not marked peptide or
   nucleotide) into ligand chains anymore
 * Remove ENABLE_IMG flag in cmake build system - img module is always built now
 * Several minor bug fixes and improvements.

Changes in Release 2.2.0
--------------------------------------------------------------------------------

 * Introduced CreateMeanlDDTHA function to evaluate the consistency of a
   structure with a full ensemble of structures.
 * FindMembrane algorithm returns additional intermediate results.
 * Detect Boost and Python using functionality provided by CMake instead of our 
   own code. You might have to adapt CMake flags when building OpenStructure to 
   variables specified here: 
   https://cmake.org/cmake/help/latest/module/FindPython.html
 * Update container base image from ubuntu:18.04 to ubuntu:20.04
 * Several minor bug fixes and improvements.

Changes in Release 2.1.0
--------------------------------------------------------------------------------

 * Use the newer Voronota implementation as default in CAD-score binding
 * Added HHblits3 support - HHblits2 still supported but considered deprecated
 * HMMScore: HMM-HMM alignment score as it is optimized in HHblits searches
 * Support for the new carbohydrate-extension in the mmCIF file format
   (https://www.wwpdb.org/documentation/carbohydrate-remediation)
 * Several minor bug fixes and improvements.

Changes in Release 2.0.0