@@ -1,3 +1,8 @@
+Changes in Release 2.x.c
+--------------------------------------------------------------------------------
+
+ * Simplify Dockerfile - remove MSMS
+
 Changes in Release 2.3.0
 --------------------------------------------------------------------------------
 
